samples/_failures_safe/1761555077_30e615_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56629eba.c: In function ‘main’:
./samples/SAFE/__tmp_56629eba.c:174:9: error: expected declaration or statement at end of input
  174 |         if (token.type == TOKEN_EOF || token.type == TOKEN_INVALID) {
      |         ^~
./samples/SAFE/__tmp_56629eba.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56629eba.c:174:9: error: expected declaration or statement at end of input
